--- a/frontend/src/css/Register.css
+++ b/frontend/src/css/Register.css
@@ -24,6 +24,7 @@ form {
 
 label {
     color: #6A1B9A;
+    
     margin-bottom: 5px;
 }
 
@@ -33,6 +34,7 @@ input {
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
+    margin-top: 10px;
 }
 
 button {
@@ -75,6 +77,7 @@ button:hover {
     align-items: center;
     justify-content: center;
     padding: 5px;
+    margin-top: 5px;
 }
 
 .show-password-icon:hover {
@@ -112,7 +115,9 @@ button:hover {
     cursor: pointer;
     border: 2px solid #ccc;
     transition: background-color 0.3s;
-    font-size: 12px;
+    font-size: 11px;
+    font-weight: normal;
+    margin-top: 7px;
 }
 
 .custom-file-label:hover,
