--- a/frontend/src/css/Doctores.css
+++ b/frontend/src/css/Doctores.css
@@ -107,3 +107,78 @@
     background-color: #4e4ab7; /* Tono más oscuro de púrpura */
 }
 
+/* Contenedor de filtros */
+.filters {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 20px;
+}
+
+.filter-select {
+    padding: 9px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    font-size: 15px;
+    color: #333;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+} 
+
+/* Contenedor del input con ícono */
+.filter-search-container {
+    position: relative;
+    display: inline-block;
+    width: 300px;
+}
+
+/* Estilo del input */
+.filter-search {
+    margin-top: 0px;
+    width: 100%;
+    padding: 10px 35px 10px 10px; /* Espacio a la derecha para el ícono */
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    font-size: 15px;
+    color: #333;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.filter-search:focus {
+    outline: none;
+    border-color: #6c63ff;
+}
+
+/* Estilo del ícono */
+.search-icon {
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    font-size: 18px;
+    color: #888;
+    pointer-events: none;
+}
+
+.filter-select {
+    width: 250px;
+}
+
+/* Añadir estilos responsivos */
+@media (max-width: 768px) {
+    .filters {
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .filter-select, 
+    .filter-search-container {
+        width: 90%;
+    }
+
+    .filter-search {
+        width: 100%; /* Asegura que el input llene el contenedor */
+    }
+}
+
+
