--- a/frontend/src/css/DoctorDetail.css
+++ b/frontend/src/css/DoctorDetail.css
@@ -64,6 +64,7 @@
     padding: 20px;
     border-radius: 8px;
     background-color: #f9f9f9;
+    margin-bottom: 20px;
 }
 
 .consultas-container {
@@ -89,6 +90,46 @@ h3{
     font-size: 1.1rem; /* Ajusta el tamaño del texto */
     color: #333; /* Color de texto para mayor contraste */
 }
+
+.doctor-details p {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    font-size: 1.1rem;
+    color: #333;
+    margin: 8px 0;
+    transition: transform 0.3s ease, opacity 0.3s ease;
+}
+
+.doctor-details p i {
+    color: #4CAF50; /* Verde para íconos */
+    font-size: 1.2rem;
+}
+
+.doctor-details p:hover {
+    transform: scale(1.05); /* Aumenta ligeramente el tamaño al pasar el mouse */
+    opacity: 0.9;
+}
+
+.doctor-info-container {
+    animation: fadeIn 1s ease;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(-20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+.consultas-container, .doctor-biography-container {
+    animation: fadeIn 1.2s ease;
+}
+
 
 /* Estilos para el modal */
 /* Fondo semitransparente para el modal */
@@ -124,6 +165,8 @@ h3{
     padding: 20px;
     width: 90%;
     max-width: 590px;
+    max-height: 80vh; /* Limita la altura del modal al 80% de la ventana */
+    overflow-y: auto; /* Activa el scroll vertical si el contenido es más alto que el modal */
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.2);
     text-align: center;
     animation: slideDown 0.3s ease; /* Aplicar animación */
@@ -144,7 +187,6 @@ h3{
     color: #4CAF50;
 }
 
-/* Etiquetas del formulario */
 /* Etiquetas del formulario */
 .modal-label,
 .modal-label-calendary,
@@ -247,6 +289,7 @@ h3{
     align-items: center; /* Centrar verticalmente */
     gap: 10px; /* Espacio entre los botones */
     margin-top: 20px; /* Separación superior */
+    margin-bottom: -10px;
 }
 
 
