--- a/frontend/src/css/DoctorDetail.css
+++ b/frontend/src/css/DoctorDetail.css
@@ -77,6 +77,21 @@
     background-color: #f9f9f9;
 }
 
+.map-container {
+    flex: 1;
+    max-width: 720px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #f9f9f9;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    margin-bottom: 20px;
+}
+
 h3{
     text-align: center;
 }
@@ -130,6 +145,33 @@ h3{
     animation: fadeIn 1.2s ease;
 }
 
+/* Ajustes generales para que los estilos sean responsivos */
+@media (max-width: 768px) {
+    .doctor-info-container {
+        flex-direction: column; /* Cambiar a disposición vertical */
+        align-items: center; /* Asegurar que los elementos estén centrados */
+    }
+
+    .doctor-image {
+        margin-right: 0; /* Eliminar el margen derecho en pantallas pequeñas */
+        margin-bottom: 15px; /* Añadir margen inferior para espacio */
+    }
+
+    .doctor-buttons {
+        flex-direction: column; /* Botones en una sola columna */
+        gap: 0px; /* Más espacio entre botones */
+        width: 100%; /* Asegurar que ocupen el ancho completo */
+    }
+
+    .doctor-biography-container,
+    .consultas-container {
+        max-width: 90%; /* Reducir el ancho en pantallas pequeñas */
+    }
+
+    .map-container {
+        max-width: 94.5%; /* Reducir el ancho en pantallas pequeñas */
+    }
+}
 
 /* Estilos para el modal */
 /* Fondo semitransparente para el modal */
@@ -376,31 +418,6 @@ h3{
         max-width: 100%; /* Asegurar que el textarea no se salga del contenedor */
     }
 }
-
-/* Ajustes generales para que los estilos sean responsivos */
-@media (max-width: 768px) {
-    .doctor-info-container {
-        flex-direction: column; /* Cambiar a disposición vertical */
-        align-items: center; /* Asegurar que los elementos estén centrados */
-    }
-
-    .doctor-image {
-        margin-right: 0; /* Eliminar el margen derecho en pantallas pequeñas */
-        margin-bottom: 15px; /* Añadir margen inferior para espacio */
-    }
-
-    .doctor-buttons {
-        flex-direction: column; /* Botones en una sola columna */
-        gap: 15px; /* Más espacio entre botones */
-        width: 100%; /* Asegurar que ocupen el ancho completo */
-    }
-
-    .doctor-biography-container,
-    .consultas-container {
-        max-width: 90%; /* Reducir el ancho en pantallas pequeñas */
-    }
-}
-
 
 /* Confirmación modal responsivo */
 @media (max-width: 600px) {
