--- a/frontend/src/css/Header.css
+++ b/frontend/src/css/Header.css
@@ -57,7 +57,7 @@
 .navigation ul li a {
     text-decoration: none;
     color: white;
-    font-size: 1.2em;
+    font-size: 17px;
     transition: color 0.3s ease;
 }
 
@@ -243,9 +243,9 @@ body {
 .icon {
     width: 20px;
     height: 20px;
-    margin-right: 10px;
+    margin-right: 5px;
     color: white;
-    margin-bottom: -2px;
+    margin-bottom: -3px;
     transition: color 0.3s ease; /* Transición suave para el cambio de color */
 }
 
@@ -253,9 +253,9 @@ body {
 {
     width: 20px;
     height: 20px;
-    margin-right: 5px;
+    margin-right: 2px;
     color: white;
-    margin-bottom: -2px;
+    margin-bottom: -3px;
     transition: color 0.3s ease; /* Transición suave para el cambio de color */
 }
 
@@ -263,5 +263,22 @@ body {
 {
     width: 30px;
     height: 30px;
+    
+}
+.icon-help
+{
+    width: 20px;
+    height: 20px;
+    margin-bottom: -3px;
+    margin-right: 2px;
+    
+}
+
+.icon-circle
+{
+    width: 20px;
+    height: 20px;
+    margin-bottom: -3px;
+    margin-right: 2px;
     
 }
